test: snapshot of some new stored procedures
